# postgres-extension-mcp-server

backend/: README.md  claude_desktop_config.json  mcp_postgres_server.py  pyproject.toml  requirements.txt
