[project]
name = "postgres-extensions-mcp"
version = "0.1.0"
description = "MCP server exposing PostgreSQL extensions as tools for Claude"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn", 
    "psycopg2-binary",
    "sqlalchemy",
    "pydantic",
    "geoalchemy2",
    "pgvector",
    "scikit-learn",
    "umap-learn",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "python-dotenv",
    "sqlalchemy-utils",
    "openai",
    "mcp[cli]>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
postgres-mcp-server = "mcp_postgres_server:main"